# internal/handler/shop_type.go
@@ -29,7 +29,7 @@ func NewShopTypeHandler(
 // @Description
 // @Tags shop-type
 // @Produce json
-// @Success 200 {object} api.GetShopTypeListRespData
+// @Success 200 {object} api.GetShopTypeListResp
 // @Router /shop-type/list [get]
 func (h *ShopTypeHandler) GetShopTypeList(ctx *gin.Context) {
 	shopTypeList, err := h.shopTypeService.GetShopTypeList(ctx.Request.Context())
